[gd_scene load_steps=2 format=3 uid="uid://irsikhodahdr"]

[ext_resource type="Script" path="res://Dose/DoseOutput.gd" id="1_6fk5p"]

[node name="DoseOutput" type="Control"]
custom_minimum_size = Vector2(550, 175)
layout_mode = 3
anchors_preset = 0
offset_right = 550.0
offset_bottom = 175.0
script = ExtResource("1_6fk5p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.65098, 0.670588, 0.796078, 1)

[node name="Dose" type="Label" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = -24.0
offset_right = 270.0
offset_bottom = 144.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "0.0"
vertical_alignment = 1

[node name="DoseExtra" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = -69.0
offset_right = 190.0
offset_bottom = -11.0
grow_vertical = 0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.372549, 0.372549, 0.372549, 1)
theme_override_font_sizes/font_size = 40
text = "(+0.0)"

[node name="Plus" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -65.0
offset_right = -21.0
offset_bottom = 65.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 87
text = "+"

[node name="Minus" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -65.0
offset_right = -142.0
offset_bottom = 65.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 87
text = "-"

[connection signal="pressed" from="Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_minus_pressed"]
